--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <div id="main">
         <div id="box1">
             <div class="divimg">
-            <img src="/Task19/images/super-1.png" alt="super1">
+            <img src="images/super-1.png" alt="super1">
             <p>Spider man</p>
         </div>
         <div class="divimg">
-            <img src="/Task19/images/super-3.png" alt="super2">
+            <img src="images/super-3.png" alt="super2">
             <p>Wonder Woman</p>
         </div>
         </div>
         <div id="box2"><h1>5-0</h1></div>
         <div id="box3">
             
-                  <div  class="divimg">  <img src="/Task19/images/super-2.png" alt="captain">
+                  <div  class="divimg">  <img src="images/super-2.png" alt="captain">
                      <p>Captain America</p>
                    </div>
                    <div class="divimg">
-                          <img src="/Task19/images/super-4.png"  alt="gem">
+                          <img src="images/super-4.png"  alt="gem">
                             <p>Gem Woman</p>
                     </div>
              
